--- a/node_implementation/package.json
+++ b/node_implementation/package.json
@@ -20,9 +20,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "pdf-parse": "^1.1.1",
-    "pg": "^8.11.3",
+    "blake2": "^5.0.0",
     "dotenv": "^16.3.1",
-    "blake2": "^5.0.0"
+    "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.3",
+    "pg": "^8.11.3"
   }
 }
